<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrainStorming</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>

    <!-- MENU DRAWER STRING -->
    <string name="drawer_home_string">Home</string>
    <string name="drawer_mycategories_string">My Categories</string>
    <string name="drawer_myprofile_string">My Profile</string>
    <string name="drawer_login_string">LogIn</string>
    <string name="drawer_logout_string">LogOut</string>
    <string name="drawer_synchro_string">Synchronize</string>

    <!-- ICON DRAWER STRING -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">New user?</string>
    <string name="action_forgot_pass_short">Forgot pass?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to editing-->
    <string name="edit_value_string">New value</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Edit</string>

    <!-- String related to cropper -->
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
