<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home_string"
            android:checked="true" />
        <item
            android:id="@+id/drawer_mycategories_fragment"
            android:icon="@drawable/ic_mycategories"
            android:title="@string/drawer_mycategories_string" />
        <!--item
            android:id="@+id/drawer_login_fragment"
            android:icon="@drawable/ic_login"
            android:title="@string/drawer_login_string" /-->
        <item
            android:id="@+id/drawer_myprofile_fragment"
            android:icon="@drawable/ic_account"
            android:title="@string/drawer_myprofile_string" />
    </group>
    
	<item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
		            android:id="@+id/drawer_synchro_fragment"
		            android:icon="@drawable/ic_synchro"
		            android:title="@string/drawer_synchro_string" />
                <item
                    android:id="@+id/drawer_logout_fragment"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/drawer_logout_string" />
            </group>
        </menu>
    </item>
</menu>
