<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingLeft="17dp"
    android:paddingRight="17dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:padding="10dp"
        android:id="@+id/imageview_for_login"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo"
        android:scaleType="centerCrop" />

    <EditText android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Email address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        />

    <EditText android:id="@+id/accountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="Password"
        android:padding="10dp"
        />

    <Button android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_sign_in_short"
        android:padding="10dp"/>

    <TextView android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_sign_up_short"
        android:padding="10dp"/>

    <TextView android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_forgot_pass_short"
        android:padding="10dp"/>
</LinearLayout>
